# EinsteinEngine

./: .gitignore  Benchmark_FLRW.ipynb  Benchmark_Kerr.ipynb  Benchmark_Riemann.ipynb  Geodesics_Schwarchild.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
benchmarks/: Benchmark_FLRW.ipynb  Benchmark_Kerr.ipynb  Benchmark_Riemann.ipynb  compare_sympy_vs_einsteinengine.py
einsteinengine/symbolic/: christoffel.py  connection.py  core.py  einstein_tensor.py  energy_momentum.py  geodesics.py  metric.py  ricci_scalar.py  ricci_tensor.py  riemann.py  spin_connection.py  tensor.py  tetrad.py  weyl.py
einsteinpy/symbolic/: christoffel.py  metric.py  riemann.py
tests/: test_extended_symbolic_features.py  test_schwarchild.py  test_weyl.py
