[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "einsteinengine"
version = "0.5.0"
authors = [
  { name="Rafael Salazar", email="rsalazard2005@gmail.com" },
]
description = "A high-performance, object-oriented symbolic tensor engine for General Relativity."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.12",
    "symengine>=0.11.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0"
]

[project.urls]
"Homepage" = "https://github.com/RSalazarD/EinsteinEngine"
"Bug Tracker" = "https://github.com/RSalazarD/EinsteinEngine/issues"